syntax = "proto3";

package myrtlespeech.protos;


// Configuration for training.
message TrainConfig {
}
